Blender 2.8 - Bake Indirect Lighting or Cubemap stuck in a loop and sometimes crash with Auto Bake selected. #63111

Closed
opened 2019-03-29 23:22:52 +01:00 by Lars Soderlind · 19 comments

System Information
Operating system: Windows 7 64-bit
Graphics card: GeForce GTX 1060 6GB

Blender Version
Broken: blender-2.80, 99d4321feff6-win64 2019-03-29
Worked: (optional)

Short description of error
If Auto Bake is selected, clicking "Bake Indirect Lighting" or "Bake Cubemap only", it never finishes with the calculation. It looks like it starts over and over in a loop.
Perhaps it's an unrelated issue but I notice the progress bar does not show up while this is going on unless I move mouse cursor around over the bottom info bar or other UI elements.
I can only exit the loop if I uncheck Auto Bake again. During my earlier tests it sometimes made blender crash/close after a while, but that has not happened for me anymore today.

Exact steps for others to reproduce the error
Open attached blend file.
Choose Rendered view mode.
Make sure Auto Bake is ticked.
Click "Bake Cubemap Only" button.
Observe how the reflection under the sphere fade in and out as if it recalculates over and over.
autobake_bug.blend

**System Information** Operating system: Windows 7 64-bit Graphics card: GeForce GTX 1060 6GB **Blender Version** Broken: blender-2.80, 99d4321feff6-win64 2019-03-29 Worked: (optional) **Short description of error** If Auto Bake is selected, clicking "Bake Indirect Lighting" or "Bake Cubemap only", it never finishes with the calculation. It looks like it starts over and over in a loop. Perhaps it's an unrelated issue but I notice the progress bar does not show up while this is going on unless I move mouse cursor around over the bottom info bar or other UI elements. I can only exit the loop if I uncheck Auto Bake again. During my earlier tests it sometimes made blender crash/close after a while, but that has not happened for me anymore today. **Exact steps for others to reproduce the error** Open attached blend file. Choose Rendered view mode. Make sure Auto Bake is ticked. Click "Bake Cubemap Only" button. Observe how the reflection under the sphere fade in and out as if it recalculates over and over. [autobake_bug.blend](https://archive.blender.org/developer/F6899634/autobake_bug.blend)
Author

Added subscriber: @soderlind

Added subscriber: @soderlind

#64945 was marked as duplicate of this issue

#64945 was marked as duplicate of this issue

#64944 was marked as duplicate of this issue

#64944 was marked as duplicate of this issue

#64926 was marked as duplicate of this issue

#64926 was marked as duplicate of this issue
Clément Foucault was assigned by Sebastian Parborg 2019-03-31 13:43:33 +02:00

Added subscribers: @Sergey, @brecht

Added subscribers: @Sergey, @brecht

This is a problem of circular tagging for update. To update the displayed lightcache, the baking operation is tagging the scene with COPY_ON_WRITE to update scene->eevee.light_cache (see EEVEE_lightbake_update) to flush this pointer to eval scene. But this tagging seems to flush down to every objects in the scene and tag the probe to update again. I do need to check for ID_RECALC_COPY_ON_WRITE on the probes to detect changes on their properties and leverage the auto bake.

@Sergey @brecht what would be the solution to flush the scene->eevee.light_cache without tagging the whole scene?

This is a problem of circular tagging for update. To update the displayed lightcache, the baking operation is tagging the scene with COPY_ON_WRITE to update scene->eevee.light_cache (see EEVEE_lightbake_update) to flush this pointer to eval scene. But this tagging seems to flush down to every objects in the scene and tag the probe to update again. I do need to check for ID_RECALC_COPY_ON_WRITE on the probes to detect changes on their properties and leverage the auto bake. @Sergey @brecht what would be the solution to flush the scene->eevee.light_cache without tagging the whole scene?
Clément Foucault was unassigned by Sergey Sharybin 2019-04-04 17:07:43 +02:00
Sergey Sharybin self-assigned this 2019-04-04 17:07:43 +02:00

Added subscriber: @fclem

Added subscriber: @fclem

It is possible, but needs some surgeoning on operations and relations.

It is possible, but needs some surgeoning on operations and relations.

Added subscriber: @alphasatari

Added subscriber: @alphasatari

Added subscriber: @bennymiltown

Added subscriber: @bennymiltown
Author

I think these new merged tasks are not actually duplicate of this one. See my comment in #64945

I think these new merged tasks are not actually duplicate of this one. See my comment in #64945

When do you think so this is gonna be fixed? I am using AMD RX 570 GPU it was working correctly till 15th of May build. Is there any way to download previous Blender 2.8 Beta build of specific date. I've mistakenly deleted it. I also think these merged task aren't duplicate of each other there is a difference between them.

When do you think so this is gonna be fixed? I am using AMD RX 570 GPU it was working correctly till 15th of May build. Is there any way to download previous Blender 2.8 Beta build of specific date. I've mistakenly deleted it. I also think these merged task aren't duplicate of each other there is a difference between them.

Ok, I've separated the tasks again.

Ok, I've separated the tasks again.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Did series of commits. Should be fixed now.

Thanks for the report, closing.

Did series of commits. Should be fixed now. Thanks for the report, closing.

Added subscriber: @DominickManuli

Added subscriber: @DominickManuli

It's still crashing for me with today release.

It's still crashing for me with today release.

@DominickManuli Please submit a new report including exact system configuration, minimal demo file needed and exact steps.

@DominickManuli Please submit a new report including exact system configuration, minimal demo file needed and exact steps.

In #63111#689198, @Sergey wrote:
@DominickManuli Please submit a new report including exact system configuration, minimal demo file needed and exact steps.

I just did https://developer.blender.org/T65206

> In #63111#689198, @Sergey wrote: > @DominickManuli Please submit a new report including exact system configuration, minimal demo file needed and exact steps. I just did https://developer.blender.org/T65206
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63111
No description provided.